[package]
name = "halia"
version = "0.1.0"
edition = "2021"

[features]
default = [
    "halia_cleanup",
    "halia_cursor",
    "halia_fixed_timestep",
    "halia_force_ratio",
    "halia_sets",
    "halia_time_to_live",
    "halia_transform2"
]
halia_cleanup = []
halia_cursor = []
halia_fixed_timestep = ["halia_transform2"]
halia_force_ratio = []
halia_sets = []
halia_time_to_live = ["halia_fixed_timestep"]
halia_transform2 = []

[dependencies]
bevy = "0.10.0"

[dev-dependencies]
lerp = "0.4"
rand = "0.8"

[workspace]
resolver = "2"
members = [
    "ci"
]
